# Task-2_Kursova_sys_prog

./: CMakeLists.txt  Makefile  build.ninja
